[gd_scene load_steps=4 format=3 uid="uid://cbkph8q1bp178"]

[ext_resource type="Script" path="res://scripts/cards/usable_card.gd" id="1_jdhoi"]
[ext_resource type="PackedScene" uid="uid://c4sdhdmmxwye6" path="res://scenes/cards/Card.tscn" id="2_03i0d"]
[ext_resource type="Texture2D" uid="uid://borofa6wbn8jx" path="res://assets/images/card/image2.png" id="3_1s348"]

[node name="UsableCard" type="Node2D"]
script = ExtResource("1_jdhoi")

[node name="Card" parent="." instance=ExtResource("2_03i0d")]
unique_name_in_owner = true
title = "Defend"
description = "Defend 1"
cost = 2
image = ExtResource("3_1s348")
type = 1
